Implemented JWT Authentication To secure application's API

--- a/GroceryManagement.WebApi/appsettings.json
+++ b/GroceryManagement.WebApi/appsettings.json
@@ -8,5 +8,10 @@
     "ConnectionStrings": {
         "dbcs": "Server=DESKTOP-OUQP7AD;Database=GroceryManagementDB;User=sa;Password=ajay@123;TrustServerCertificate=True;"
     },
-  "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ApiSettings": {
+        "SecretKey": "This is very strong GroceryManagementSecretKey",
+        "Issuer": "Grocery-Auth-Api",
+        "Audience": "Grocery-Auth-Client"
+    }
 }
