--- a/GroceryManagement.AuthApi/GroceryManagement.AuthApi.csproj
+++ b/GroceryManagement.AuthApi/GroceryManagement.AuthApi.csproj
@@ -8,17 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.15" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.15" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.15">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GroceryManagement.BL\GroceryManagement.BL.csproj" />
-    <ProjectReference Include="..\GroceryManagement.DB\GroceryManagement.DB.csproj" />
-    <ProjectReference Include="..\GroceryManagement.Dtos\GroceryManagement.Dtos.csproj" />
   </ItemGroup>
 
 </Project>
